src/infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: acgs2
  labels:
    name: acgs2
